Cleaning up and using injection instead